# openai-is-open-ai-again

./: .gitignore  README.md
agent/: main.py  pyproject.toml
agent_google_adk/: main.py  pyproject.toml
agent_openai_sdk/: main.py
finetuning/: gpt_oss_20b_fine_tuning_unsloth.ipynb
local_inference/: run_gpt_oss_20b_on_colab.ipynb
